--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,6 +1,5 @@
-
 .subscribe-button {
-    background-color: rgb(200,0,0);
+    background-color: rgb(200, 0, 0);
     color: white;
     border: none;
     cursor: pointer;
@@ -10,12 +9,15 @@
     padding: 10px 16px;
     vertical-align: top;
 }
-.subscribe-button:hover{
+
+.subscribe-button:hover {
     opacity: 0.8;
 }
-.subscribe-button:active{
+
+.subscribe-button:active {
     opacity: 0.5;
 }
+
 .join-button {
     background-color: white;
     border-color: rgb(6, 95, 212);
@@ -28,14 +30,17 @@
     padding: 9px 16px;
     vertical-align: top;
 }
-.join-button:hover{
+
+.join-button:hover {
     color: white;
     background-color: rgb(6, 95, 212);
 }
-.join-button:active{
+
+.join-button:active {
     opacity: 0.7;
 }
-.tweet-button{
+
+.tweet-button {
     height: 36px;
     background-color: rgb(29, 155, 240);
     color: white;
@@ -45,12 +50,13 @@
     cursor: pointer;
     font-size: 15px;
     font-weight: bold;
-    border:none;
+    border: none;
     transition: box-shadow 0.15s;
     vertical-align: top;
-    
+
 }
-.tweet-button:hover{
-    box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
+
+.tweet-button:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
 
 }
